<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description :</string>
    <string name="price">Price :</string>
    <string name="company">Company :</string>
    <string name="name">Name :</string>
    <string name="don_t_have_an_account">dont have an account?</string>
    <string name="Sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">WELCOME TO Shoe APP </string>
    <string name="start_tour">Start Tour</string>
    <string name="welcome_msg">Start automating your sales processwith our powerfull automation features.Click the button below to continue</string>
    <string name="start_your_tour">START YOUR TOUR</string>
    <string name="next">NEXT</string>
    <string name="start_msg">Start automating your sales processwith our powerfull automation features.Click the button below to start your tour</string>
    <string name="size">size :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="details_name">Enter shoe name</string>
    <string name="shoe_name">Shoe Name :</string>
    <string name="shoe_size">Shoe Size :</string>
    <string name="shoe_company">Shoe Company :</string>
    <string name="shoe_description">Shoe Description :</string>

</resources>