<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="80dp"
    tools:context=".Welcome.WelcomeFragment"
    android:background="@drawable/bggg">

        <!-- ConstraintLayout here helping positionnig the view's in flexable way,
   ConstraintLayout is allows you to make large and complex layouts with a flat view hierarchy-->


        <TextView
            android:id="@+id/textwelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/onboarding_header_style"
            />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/welcome_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textwelcome"
            app:layout_constraintBottom_toTopOf="@id/btnStartTour"
            style="@style/onboarding_body_style"
            />

        <Button
            android:id="@+id/btnStartTour"
            style="@style/onboarding_button_style"
            android:text="@string/start_tour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>