<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  >

    <data>

    </data>
    <!-- ConstraintLayout here helping positionnig the view's in flexable way,
ConstraintLayout is allows you to make large and complex layouts with a flat view hierarchy-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shoeNametext"
                android:text="@string/shoe_name"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shoeSizetext"
                android:text="@string/shoe_size"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shoeCompanytext"
                android:text="@string/shoe_company"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shoeDescriptiontext"
                android:text="@string/shoe_description"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shoeName"
                android:text=""
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shoeSize"
                android:text=""
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shoeCompany"
                android:text=""
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shoeDescription"
                android:text=""
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>









